made articles clickable & added shadow effect

--- a/code/index.html
+++ b/code/index.html
@@ -99,38 +99,43 @@
       <!-- Main content; Mosaic news -->
 
       <article class="box-item">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="box-info">
-          <span class="category">Worldwide</span>
-          <h3>Quisque velit nisi</h3>
-          <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulum ante ip
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="box-info">
+            <span class="category">Worldwide</span>
+            <h3>Quisque velit nisi</h3>
+            <p>
+              Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+              accumsan tincidunt. Vestibulum ante ip
+            </p>
+          </div>
+        </a>
       </article>
       <article class="box-item">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="box-info">
-          <span class="category">Style</span>
-          <h3>Quisque velit nisi</h3>
-          <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="box-info">
+            <span class="category">Worldwide</span>
+            <h3>Quisque velit nisi</h3>
+            <p>
+              Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+              accumsan tincidunt. Vestibulum ante ip
+            </p>
+          </div>
+        </a>
       </article>
       <article class="box-item">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="box-info">
-          <span class="category">Style</span>
-          <h3>Quisque velit nisi</h3>
-          <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulu
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="box-info">
+            <span class="category">Worldwide</span>
+            <h3>Quisque velit nisi</h3>
+            <p>
+              Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+              accumsan tincidunt. Vestibulum ante ip
+            </p>
+          </div>
+        </a>
       </article>
     </section>
 
@@ -196,88 +201,100 @@
     <section id="news-list">
       <!-- Extra Content; List of other news -->
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Worldwide</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Worldwide</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Style</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Style</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Worldwide</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Worldwide</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Style</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Style</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Entertainment</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Entertainment</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
       <article class="article-list">
-        <a class="article-image center-box-image" href="#"></a>
-        <div class="list-info">
-          <h3>Lorem Ipsum</h3>
-          <span class="category">Travel</span>
-          <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-            mattis…
-          </p>
-        </div>
+        <a href="#" class="article-link-box">
+          <div class="article-image center-box-image"></div>
+          <div class="list-info">
+            <h3>Lorem Ipsum</h3>
+            <span class="category">Travel</span>
+            <p>
+              Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+              ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+              ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+              mattis…
+            </p>
+          </div>
+        </a>
       </article>
     </section>
 
