made structure for mobile and tablet working, cleaner semantic

--- a/code/index.html
+++ b/code/index.html
@@ -27,16 +27,14 @@
         <p class="author">by Noemi, 01.01.2021</p>
         <p class="p-mainarticle">
         The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
-        “In Switzerland you don’t see that many artists that break through internationally, so there was no one to look up to, she says. ​“I didn’t feel [a music career] was really realistic for me.”
-        In 2019 she quit her 9 – 5 and travelled to New York, setting herself one task – to write ten songs in six months. While she was there she hit up US rapper and long-term friend Oddisee and recorded her soulful tracks in his studio, giving her momentum, recognition and most importantly, self-belief.
-        “I really loved the energy,” she says of the experience. ​“There were a lot of creative, positive vibes. [Oddisee] gave me the equipment and I just worked with my brother via Skype and voice messages.”
         Ragu’s slick production is all down to her rapper brother Japhna Gold, proving it pays to keep it in the family. Together the duo have developed a signature sound, blending raspy vocals with an electro-pop beat that often nods to their South Indian heritage.
         Debut single Good Love 2.0 is an absolute banger, guaranteed to get stuck in your head. If you haven’t already heard it played via Annie Mac on Radio 1 or on Radio 1Xtra earlier this year, you no doubt will have caught it on loop while playing FIFA 21.
         For now, Ragu is working on getting her tracks out into the world and gearing up for the day she can finally perform live. ​“I just hope that we can tour, she says. ​“We just created a band, so it would be dope if we could play live again and create memories, you know.”
         Listen to Good Love 2.0 below and get your 100% fill with Priya Ragu.</p>
       </section>
 
-      <section class="artistcards">
+      <section class="artists">
+      <div class="artistcards">
         <div class="loyle">
             <a href="../previous_artists/loyle.html">
             <h3>Loyle Carner</h3>
@@ -44,7 +42,9 @@
               <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning. ...</p>
               </a>
             </div>
+      </div>
 
+      <div class="artistcards">
         <div class="barney">
           <a href="../previous_artists/barney.html">
           <h3>Barney Artist</h3>
@@ -52,7 +52,9 @@
             <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. ...</p>
             </a>
           </div>
+      </div>
 
+      <div class="artistcards">
         <div class="celeste"> 
           <a href="../previous_artists/celeste.html">
           <h3>Celeste</h3>
@@ -60,7 +62,9 @@
             <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. ...</p>
           </a>
         </div>
+      </div>
         
+      <div class="artistcards">
         <div class="cleo">
           <a href="../previous_artists/cleo.html">
           <h3>Cleo Sol</h3>
@@ -68,7 +72,9 @@
           <p>20 year old Cleo Sol was born to musical parents who met in a Jazz band. ...</p>
           </a>
         </div>
+      </div>
 
+      <div class="artistcards">   
         <div class="foxwarren">
           <a href="../previous_artists/foxwarren.html">
           <h3>Foxwarren</h3>
@@ -77,7 +83,9 @@
             friends originally formed more than a decade ago. ...</p>
           </a>
         </div>
+      </div>
 
+      <div class="artistcards"> 
         <div class="joy">
           <a href="../previous_artists/joy.html">
           <h3>Joy Crookes</h3>
@@ -85,7 +93,9 @@
           <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. ...</p>
           </a>
         </div>
+      </div>
         
+      <div class="artistcards">
         <div class="arlo">
           <a href="../previous_artists/arlo.html">
           <h3>Arlo Parks</h3>
@@ -94,6 +104,7 @@
             feeling like that black kid who couldn't dance for shit ...</p>
           </a>
         </div>
+      </div>
       </section>
 
   </body>
