changes to html structure and css for navigation - made use of display flex and flex wrap

--- a/code/index.html
+++ b/code/index.html
@@ -6,26 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <div class="main-container">
-    <header class="head-container">
-      <img src="logo.svg" alt="Technigo logo" width="100" height="100">
-      <br><p class="tagline">nyheterna mainstream missar</p>
-      <!-- Some kind of logo and navbar -->
-    </header>
-  </div>
-  <div class="big-news-flexcontainer">
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-  </div>
-  <div>
-    <section class="small-news-flexcontainer">
-      <!-- The other news  -->
-    </section>
+
+  <header class="header-container">
+   <img class="header-logo" src="./logo.svg">
+   <nav class="navigation">
+      <a class="nav-link"href="">Access</a>
+      <a class="nav-link"href="">Anlita oss</a>
+      <a class="nav-link"href="">Annonsera</a>
+      <a class="nav-link"href="">Sök</a>
+   </nav>
+  </header>
+
+
+  <section class="big-news-container">
+    <!-- The big news content -->
+  </section>
+
+  <section class="small-news-container">
+    <!-- The other news  -->
+  </section>
   </div>
 </body>
 
