added hover effect to hero and made artcle links

--- a/code/index.html
+++ b/code/index.html
@@ -65,32 +65,40 @@
     <section id="hero">
       <!-- Featured articles -->
       <article class="large">
-        <a class="article-image" href="#"></a>
-        <div class="article-info">
-          <span class="category">Style</span>
-          <h3>Quisque velit nisi</h3>
-        </div>
+        <a href="#" class="hover-box">
+          <div class="article-image"></div>
+          <div class="article-info">
+            <span class="category">Style</span>
+            <h3>Quisque velit nisi</h3>
+          </div>
+        </a>
       </article>
       <article class="medium">
-        <a class="article-image" href="#"></a>
-        <div class="article-info">
-          <span class="category">Travel</span>
-          <h3>Quisque velit nisi</h3>
-        </div>
+        <a href="#" class="hover-box">
+          <div class="article-image"></div>
+          <div class="article-info">
+            <span class="category">Travel</span>
+            <h3>Quisque velit nisi</h3>
+          </div>
+        </a>
       </article>
       <article class="small-1">
-        <a class="article-image" href="#"></a>
-        <div class="article-info">
-          <span class="category">Worldwide</span>
-          <h3>Quisque velit nisi</h3>
-        </div>
+        <a href="#" class="hover-box">
+          <div class="article-image"></div>
+          <div class="article-info">
+            <span class="category">Worldwide</span>
+            <h3>Quisque velit nisi</h3>
+          </div>
+        </a>
       </article>
       <article class="small-2">
-        <a class="article-image" href="#"></a>
-        <div class="article-info">
-          <span class="category">Worldwide</span>
-          <h3>Quisque velit nisi</h3>
-        </div>
+        <a href="#" class="hover-box">
+          <div class="article-image"></div>
+          <div class="article-info">
+            <span class="category">Worldwide</span>
+            <h3>Quisque velit nisi</h3>
+          </div>
+        </a>
       </article>
     </section>
 
