--- a/code/index.html
+++ b/code/index.html
@@ -9,8 +9,6 @@
   <body>
     <header class="header">
       <div class="introduction">
-      <!-- Some kind of logo and navbar -->
-      <!--image class ?-->
         <img class="logo" src="./logo.svg">
       </div>
       <div class="navbar">
@@ -30,7 +28,7 @@
     <section class="big-news">
       <!--<article>
         <h1>Hej</h1>-->
-        <p>Här ska du skriva text om något ämne</p>
+        <p>Här ska du skriva text om något ämne. testar</p>
         <!--Här kan du också skriva divs-->
 
       </article>
