added new pictures to section Mor News, Made to logo static. Gave up on Css Grip for this time. Worked with layout of the borders and header.

--- a/code/index.html
+++ b/code/index.html
@@ -5,16 +5,14 @@
     <meta charset="utf-8"> <!-- I have removed a / after -8" -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <title>Daily Deep Dive</title>
+    <title>The Daily Deep Dive</title>
     <link rel="stylesheet" href="./style.css"> <!-- I have removed a / after css" -->
   </head>
   <body class="body">
     <header>
-
-      <img src="assets/jellyfish.png" alt="logo" class="logo"> 
-
+    
+      <img src="assets/jellyfish.png" alt="logo" class="logo">
       <h1>THE DAILY DEEP DIVE</h1>
-
       <nav>
         <a href="#">DEEP</a>
         <a href="#">DEEPER</a>
@@ -34,15 +32,15 @@
         <h2 class="h2">Take a Deep Breath</h2>
         <p class="heading-two"><strong>One, two, three...</strong></p></p>
         <p class="hedline-two"><strong>Lets dive down to where there are no up so or down!</strong></p>
-        <p class="blubb"> Blubb,blubb blubb blubb. Blubb, blubb blubb blubb blubb, blubb blubb blubb blubb,blubb blubb blubb.</p> 
-        <p class="blubb"> Blubb blubb blubb. Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. </p>
+        <p class="blubb"> Blubb, blubb blubb blubb? Blubb, blubb  blllubb bluuuub, bluuuub. Bl, blubbblubb, bluuub. Bluub, blubb....</p> 
+        <p class="blubb"> Blubb blubb blubb. Blubb bluuubb, blubb blubb. Blubb blluubb blubb blubb! Blubb,blubb blubb blubb!!! Blubb,blubb blubb blubb.Blubb,blubb blubb blubb. </p>
         <p class="blubb-on-mobile">Blubb blubb blubb...</p>
       </div>
     </section>
 
     <section class="four-news-container">
-      <div class="four-image">
-        <img src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jellyfish"></div>
+      <div>
+        <img class="four-image" src="assets/ryoji-hayasaka-NPVICB8ipdg-unsplash.jpg" alt="Jellyfish">
       </div>
       <div>
         <img class="four-image" src="assets/connor-wang-AUUdulLnRnE-unsplash.jpg" alt="Jellyfish">
@@ -54,26 +52,61 @@
         <img class="four-image" src="assets/jeffrey-hamilton-JtVyK2Sej2I-unsplash.jpg" alt="Jellyfish">
       </div> 
     </section>
-    
 
-    <section class="wrapper">
-      <div>
+      <div class="h3-div"> 
         <h3>Let's go even deeper...</h3>
       </div>
-          <section class="grid-articles">
-            <div class="grid-img">
-              <img src="assets/darren-chan-gAToI38WygU-unsplash.jpg" alt="Jellyfish">
-            </div>
-            <div class="grid-img">
-              <img src="assets/falco-negenman--f2sJr-PJDA-unsplash.jpg" alt="Jellyfish">        </div>
-            </div>
-            <div class="grid-img">
-              <img src="assets/ned-daniels-dr_9oxbVnuc-unsplash.jpg" alt="Jellyfish">
-            </div>            
-            <div class="grid-img">
-              <img src="assets/nik-ramzi-nik-hassan-mbpKRQEjZis-unsplash.jpg" alt="Jellyfish">
-            </div>
-          </section>  
+
+    <section class="more-news-container">
+      <div >
+        <img class="grid-img" src="assets/darren-chan-gAToI38WygU-unsplash.jpg" alt="Jellyfish"> 
+      </div>
+      <div>
+        <img class="grid-img" src="assets/nik-ramzi-nik-hassan-mbpKRQEjZis-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div>
+        <img class="grid-img" src="assets/ned-daniels-dr_9oxbVnuc-unsplash.jpg" alt="Jellyfish">
+      </div> 
+      <div>
+        <img class="grid-img" src="assets/falco-negenman--f2sJr-PJDA-unsplash.jpg" alt="Jellyfish">       
+      </div>
+      <!-- new img -->
+      <div >
+        <img class="grid-img" src="assets/bernard-hermant--ufym5Rdqs4-unsplash.jpg" alt="Jellyfish"> 
+      </div>
+      <div>
+        <img class="grid-img" src="assets/arushee-agrawal-pU0a4vYJwco-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div>
+        <img class="grid-img" src="assets/karan-karnik-w7WVYjY8c5w-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div>
+          <img class="grid-img" src="assets/joel-filipe-_AjqGGafofE-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div>
+        <img class="grid-img" src="assets/ashleigh-robertson-zoA8uW7jvP0-unsplash.jpg" alt="Jellyfish"> 
+      </div>
+      <div>
+        <img class="grid-img" src="assets/elisha-terada-MmuW8T6GwK4-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div>
+        <img class="grid-img" src="assets/graham-ohayon-qA-XozdYBV4-unsplash.jpg" alt="Jellyfish">
+      </div> 
+      <div>
+        <img class="grid-img" src="assets/greg-ortega-TdZCUE0mQEs-unsplash.jpg" alt="Jellyfish">       
+      </div>
+      <div>
+        <img class="grid-img" src="assets/yichun-lu-31v-7ZwfXBM-unsplash.jpg" alt="Jellyfish">       
+      </div>
+      <div>
+        <img class="grid-img" src="assets/vino-li-b3nfoSSEmtA-unsplash.jpg" alt="Jellyfish">
+      </div>
+      <div >
+        <img class="grid-img" src="assets/roya-ann-miller-wVG8CCQ20A0-unsplash.jpg" alt="Jellyfish"> 
+      </div>
+      <div>
+        <img class="grid-img" src="assets/vino-li-UoZ_YPICC1s-unsplash.jpg" alt="Jellyfish">
+      </div> 
     </section>
 
 
