--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,9 @@
 
           <div class="card-container">
             <h4>Lorem Ipsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo.
+              Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a,
+              pellentesque orci.</p>
 
           </div>
 
@@ -63,7 +65,9 @@
 
           <div class="card-container">
             <h4>Lorem Ipsum</h4>
-            <p>TeLorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.xt</p>
+            <p>TeLorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum
+              justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a,
+              pellentesque orci.xt</p>
 
           </div>
 
@@ -75,7 +79,9 @@
 
           <div class="card-container">
             <h4>Lorem Ipsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo.
+              Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a,
+              pellentesque orci.</p>
           </div>
 
         </div>
@@ -85,7 +91,9 @@
 
           <div class="card-container">
             <h4>Lorem Ipsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo. Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a, pellentesque orci.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et placerat massa. Sed ac dictum justo.
+              Maecenas dignissim dolor sed interdum cursus. Pellentesque eu augue consectetur, placerat mi a,
+              pellentesque orci.</p>
 
           </div>
 
