deleted an image and code in css

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <title>The Technigo Art Newspapers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <!-- meta tag for responsiveness -->
 
 </head>
 
@@ -45,7 +45,7 @@
 
     </section>
 
-
+    <!--small news section one-->
 
     <section class="text">
 
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-
+    <!--small news section two-->
 
     <section class="texttwo">
         <div class="containertwo">
@@ -109,12 +109,6 @@
             </div>
 
         </div>
-
-        <div class="containertwo">
-            <div class="imagetwotwo"><img src="books4.png"></div>
-            <div class="news-cardfour"><b><p>Book Club</p></b>
-                <p>Learn the techniques with Tom Browning</p>
-            </div>
 
 
         </div>
