--- a/code/index.html
+++ b/code/index.html
@@ -9,83 +9,67 @@
   </head>
 
   <body>
-    
     <header class="header">
-      <!--Add header child for logo and title set to 50%-->
-      <img class="logo" src="\assets\logonew.png" alt="Header Logo">
-      <h1 class="header-title">SNEAKERS & NEWS</h1>
-      <!---add header child for -->
-      <div class="mobile-hamburger">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
-      <nav class="navigation">
-          <a href="#">News</a>
-          <a href="#">Where to buy</a>
-          <a href="#">About</a>
-      </nav>
-  </header>
+        <!--Add header child for logo and title set to 50%-->
+        <img class="logo" src="\assets\logonew.png" alt="Header Logo">
+        <h1 class="header-title">SNEAKERS & NEWS</h1>
+        <!---add header child for -->
+        <div class="mobile-hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <nav class="navigation">
+            <a href="#">News</a>
+            <a href="#">Where to buy</a>
+            <a href="#">About</a>
+        </nav>
+    </header>
 
- 
-  <section class="big-news-container">
-    <section class="container">
-      <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021">
-          <img src="\assets\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk Black">
-      </a>
-      <div>
-          <h1>Fresh Out the Box</h1>
-          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways of black/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
-          </p>
-      </div>
-    </section>
-  </section>
-  
-  <section class="small-news-container"> <!--Contain only cards-->
-    <section class="container">
-      <div>
-        <h2>Release Radar</h2>
-        <p>
-            The hottest release news. </br>
-            Just for you!
-        </p>
-      </div>  
-  
-      <section class="small-news"> <!---Card contaner then-->
-        <a href="https://news.nike.com/content/converse-x-concepts-southern-flame-all-star-bb-evo-and-chuck-70">
-            <img src="\assets\Converse_x_CONCEPTS_Chuck_70_2_native_1600.jpg" alt="Converse Chuck 70">
-            <h4>Converse x CONCEPTS</h4>
-            <p>
-              <i>2021, January 14</i> - Converse and CONCEPTS take their collaboration to a whole new level with a "peach basket" theme. The colab honors 130 years of basketball history.
-            </p>
-            </a>
-        <a href="https://news.nike.com/content/nike-x-cpfm-swarovski-dunk-low">
-              <img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="Converse Chuck 70">
-              <h4>Shine Some Light on the Nike Dunk</h4>
-              <p>
-              <i>2020, November 11</i> - With a theme of air and sunshine Cactus Plant Flea Market has done a brilliant collaboration again. The Nike Dunk is shining bright like a diamond with actual Swarovski® crystals.
-              </p>
-        </a>
-        <a href="https://news.nike.com/content/ruohan-wang-flyleather-pack">
-              <img src="\assets\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="Converse Chuck 70">
-              <h4>Mother Nature Taking Over</h4>
-              <p>
-              <i>2020, September 18</i> - Ruohan Wang (Berlin-Based illustrator) gives the Flyleather pack some optimistic colour and motion. The Flyleather uppers are made with 50% recycled leather fibre, matching the earthy illustration. 
-              </p>
-        </a>
-          <a href="https://news.nike.com/content/nike-sportswear-pack-air-force-1-air-max-98-lx-official-images">
-              <img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="Converse Chuck 70">
-              <h4>Rip it & Tear it Unique</h4>
-              <p>
-              <i>2020, April 16</i> - Nike Air Force 1 LX releases a unique design for you to be creative in your own way. With an upper layer of white textile, it is what is underneath that is the intriguing part. You can peel back as much as you want from the upper layer to make your own colourway beneath. 
-              </p>
+    <section class="big-news">
+      <div class="bn-card">
+        <div class="img-container">
+          <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021"><img src="\assets\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk">
           </a>
-      </section>
+        </div>
+        <div class="bn-text">
+          <h1>Freshest Release</h1>
+          <p>Right out of the box</p>
+        </div>
+      </div>
     </section>
-  </section>
-  
 
- 
+    <section class="small-news">
+      <div class="sn-card">
+        <div class="sn-img-container">
+          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+        </div>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback </p>
+      </div>
+
+      <div class="sn-card">
+        <div class="sn-img-container">
+          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+        </div>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
+      </div>
+
+      <div class="sn-card">
+        <div class="sn-img-container">
+          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+        </div>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
+      </div>
+
+      <div class="sn-card">
+        <div class="sn-img-container">
+          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+        </div>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
+      </div>
+
+    </section>
+
   </body>
 </html>
