added netlify link, icon & title

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2: The News Site</title>
+    <title>Rivling News</title>
+    <link rel="icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="./main.css" type="text/css" />
     <link rel="stylesheet" href="./assets/riesling-webfont.css" type="text/css" charset="utf-8" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
