added and removed logo, added titles for cards, added shadow effect on picture container

--- a/code/index.html
+++ b/code/index.html
@@ -45,29 +45,35 @@
         <div class="sn-img-container">
           <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
         </div>
+        <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback </p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+          <a href=""><img src="\assets\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
+        <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+          <a href=""><img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
+        <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
       </div>
 
       <div class="sn-card">
         <div class="sn-img-container">
-          <a href=""><img src="\assets\PLATINUM___MEDIAL_native_1600.jpg" alt="IMAGE"></a>
+          <a href=""><img src="\assets\Nike_Chinese_NY.jpg" alt="IMAGE"></a>
         </div>
+        <h3>Rip & Tear</h3>
         <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
       </div>
+
+      
 
     </section>
 
