--- a/code/index.html
+++ b/code/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
 
-    <header>
+    <header class="header">
         <img class="logo" src="./star.svg" alt="Alva logo"> 
         <h1>ALVA</h1>
-        <nav> 
+        <nav class="navigation"> 
           <a href="#">About</a>
           <a href="#">Archive</a>
           <a href="#">Contact</a>
@@ -24,9 +24,9 @@
           <div></div>
         </div>
         <div class="social-media">
-          <a href="#"><img src="./facebook.svg" alt="Facebook"></a> <!-- maybe but a class in each of this to regulate the space between them? -->
-          <a href="#"><img src="./instagram.svg" alt="Instagram"></a>
-          <a href="#"><img src="./youtube.svg" alt="Youtube"></a>
+          <a href="#"><img src="./facebook.svg" alt="Facebook" target="_blank"></a> <!-- maybe ut a class in each of these to regulate the space between them? -->
+          <a href="#"><img src="./instagram.svg" alt="Instagram" target="_blank"></a>
+          <a href="#"><img src="./youtube.svg" alt="Youtube" target="_blank"></a>
         </div>
     </header>
 
@@ -36,7 +36,7 @@
           <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
           <div class="big-news-text">
             <h2>Looking back</h2>
-            <p>2020 - Year of the dog</p>
+            <p>"2020 - Year of the dog"</p>
           </div>
         </section>
       </section>
@@ -44,51 +44,35 @@
       <section class="other-news">
         <section class="container">
             <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
-            <div class="other-news-text">
-              <h3>Casual stroll in the woods</h3>
-            </div>
+            <h3>"A casual stroll in the woods"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
-            <div class="other-news-text">
-              <h3>Endless possibilities</h3>
-            </div>
+            <h3>"Endless possibilities - a philosophical story"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
-            <div class="other-news-text">
-              <h3>"Play with me, please!"</h3>
-            </div>
+            <h3>"How to destroy a toy in 10 seconds"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
-            <div class="other-news-text">
-              <h3>Nothing beats the feeling of grass</h3>
-            </div>
+            <h3>"Nothing beats the feeling of grass"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
-            <div class="other-news-text">
-              <h3>The road to happiness</h3>
-            </div>
+            <h3>"The road to happiness"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
-            <div class="other-news-text">
-              <h3>That time I almost choked on a stick</h3>
-            </div>
+            <h3>"That time I almost choked on a stick"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
-            <div class="other-news-text">
-              <h3>How I became the Queen of everything</h3>
-            </div>
+            <h3>"How I became the Queen of everything"</h3>
         </section>
         <section class="container">
             <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
-            <div class="other-news-text">
-              <h3>Lazy days</h3>
-            </div>
+              <h3>"How to relax"</h3>
         </section>
       </section>
     </main>
@@ -102,15 +86,15 @@
         </div>
         <div class="container-social-media">
           <a href="#">
-            <img src="./facebook.svg" alt="Facebook"> 
+            <img src="./facebook.svg" alt="Facebook" target="_blank"> 
             Facebook
           </a>
           <a href="#">
-            <img src="./instagram.svg" alt="Instagram"> 
+            <img src="./instagram.svg" alt="Instagram" target="_blank"> 
             Instagram 
           </a>
           <a href="#">
-            <img src="./youtube.svg" alt="Youtube"> 
+            <img src="./youtube.svg" alt="Youtube" target="_blank"> 
             Youtube 
           </a>
         </div>
