I don't even know what I'm doing anymore

--- a/code/index.html
+++ b/code/index.html
@@ -15,24 +15,39 @@
   </head>
 
   <body class="container">
+
     <header class="header container">
-      <div class="header-child">
+
+      <div class="mobile-menu"> <!--Hamburger Menu-->
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+      <div class="mobile-desktop"> <!--Only appears in mobile and desktop-->
         <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
         <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
-      </div>  
-      <div class="header-child">    
-      <nav class="desktop-menu">
-        <a class="navigation-element" href="#">News</a>
-        <a class="navigation-element" href="#">Find A Rescue</a>
-        <a class="navigation-element" href="#">About Us</a>
-        <a class="navigation-element" href="#">Shop</a>
-      </nav>
-      <div class="mobile-menu">
-        <div></div>
-        <div></div>
-        <div></div>
+      </div> 
+
+      <div class="mobile-desktop">    
+        <nav class="desktop-menu">
+          <a class="navigation-element" href="#">News</a>
+          <a class="navigation-element" href="#">Find A Rescue</a>
+          <a class="navigation-element" href="#">About Us</a>
+          <a class="navigation-element" href="#">Shop</a>        
+        </nav>
       </div>
+
+      <div class="tablet">
+        <nav class="desktop-menu">
+          <a class="navigation-element" href="#">News</a>
+          <a class="navigation-element" href="#">Find A Rescue</a>
+          <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
+          <a class="navigation-element" href="#">About Us</a>
+          <a class="navigation-element" href="#">Shop</a>        
+        </nav>
       </div>
+      
     </header>
 
     <section class="big-news">
