--- a/code/index.html
+++ b/code/index.html
@@ -11,21 +11,68 @@
 <body>
 
   <header class="header-container">
-   <img class="header-logo" src="./logo.svg">
-   <nav class="navigation">
-      <a class="nav-link"href="">Access</a>
-      <a class="nav-link"href="">Anlita oss</a>
-      <a class="nav-link"href="">Annonsera</a>
-      <a class="nav-link"href="">Sök</a>
-   </nav>
+    <img class="header-logo" src="./logo.svg">
+    <nav class="navigation">
+      <a class="nav-link" href="">Access</a>
+      <a class="nav-link" href="">Anlita oss</a>
+      <a class="nav-link" href="">Annonsera</a>
+      <a class="nav-link" href="">Sök</a>
+    </nav>
   </header>
 
 
-  <section class="big-news-container">
+  <section class="big-news-section">
+    <h3>Big News</h3>  
+    <div class="polaroid-big">
+      
+      <img
+        src="https://images.unsplash.com/photo-1514412076816-d228b5c0973c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
+        alt="Flock of birds over water" style="width:100%">
+      <div class="text-container">
+        <p>&copy; Anthony Delanoix</p>
+      </div>
+    </div>
+
     <!-- The big news content -->
   </section>
 
-  <section class="small-news-container">
+  <section class="other-news-section">
+    <h3>Other News</h3> 
+    <div class="polaroid">
+      <img class="polariod-picture"
+        src="https://images.unsplash.com/photo-1493236296276-d17357e28888?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80"
+        alt="Small bird looking left" style="width:100%">
+      <div class="text-container">
+        <p>&copy; Vittorio Zamboni</p>
+      </div>
+    </div>
+
+    <div class="polaroid">
+      <img class="polariod-picture"
+        src="https://images.unsplash.com/photo-1512658740823-0ebb97b3b86e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
+        alt="Birds in pink sunset" style="width:100%">
+      <div class="text-container">
+        <p>&copy; Gauravdeep Singh Bansal</p>
+      </div>
+    </div>
+
+    <div class="polaroid">
+      <img class="polariod-picture"
+        src="https://images.unsplash.com/photo-1486365227551-f3f90034a57c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
+        alt="Blue Kingfisher on branch" style="width:100%">
+      <div class="text-container">
+        <p>&copy; Boris Smokrovic</p>
+      </div>
+    </div>
+
+    <div class="polaroid">
+      <img class="polariod-picture"
+        src="https://images.unsplash.com/photo-1508163223045-1880bc36e222?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80"
+        alt=" Birds over forrest" style="width:100%">
+      <div class="text-container">
+        <p>&copy; Katerina Kerdi</p>
+      </div>
+    </div>
     <!-- The other news  -->
   </section>
   </div>
