Added some smalle img. Turned the big img into a polaroid

--- a/code/index.html
+++ b/code/index.html
@@ -31,8 +31,11 @@
     </nav>
   </header>
 
-  <section class="big-news">
-    <img class="big-news-img" src="./assets/next-trip-img.png" alt="Picture of a mountain" width="450px">
+  <section class="big-news">    
+      <div class="big-news-img">
+      <img  src="./assets/next-trip-img.png" alt="Picture of a mountain" width="450px">
+      <p class="text-on-photo">#ALBANIA</p>
+      </div>
     <div class="big-news-text">
       <h3>Next Trip</h3><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -47,19 +50,19 @@
 
   <section class="small-news">
     <a href="#">
-      <img src="./assets/Norge.jpg" alt="Photo of a">
-      <p>Some image text</p>
+      <img src="./assets/Norge.jpg" alt="Photo from Norway">
+      <p>Norway</p>
     </a>
     <a href="#">
-      <img src="./assets/Rumänien.jpg" alt="Photo of a">
-      <p>Some image text</p>
+      <img src="./assets/Rumanien.png" alt="Photo from Rumania">
+      <p>Rumania</p>
     </a>
     <a href="#">
-      <img src="./assets/trappsteg.jpg" alt="Photo of a">
-      <p>Some image text</p>
+      <img src="./assets/trappsteg.jpg" alt="Photo from Sweden">
+      <p>Sweden</p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
+      <img src="./assets/logo.svg" alt="Photo from Sweden">
       <p>Some image text</p>
     </a>
     <a href="#">
