--- a/code/index.html
+++ b/code/index.html
@@ -51,26 +51,26 @@
   <section class="small-news">
     <a href="#">
       <img src="./assets/Norge.jpg" alt="Photo from Norway">
-      <p>Norway</p>
+      <p>Troll´s tongue Norway</p>
     </a>
     <a href="#">
       <img src="./assets/Rumanien.png" alt="Photo from Rumania">
-      <p>Rumania</p>
+      <p>Transylvania Rumania</p>
     </a>
     <a href="#">
       <img src="./assets/trappsteg.jpg" alt="Photo from Sweden">
-      <p>Sweden</p>
+      <p>Saxnäs north of Sweden</p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo from Sweden">
-      <p>Some image text</p>
+      <img src="./assets/hoga-kusten.jpg" alt="Photo from Sweden">
+      <p>High Coast Sweden</p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
-      <p>Some image text</p>
+      <img src="./assets/kanot.jpg" alt="Photo from a conoe">
+      <p>Canoeing in Sweden </p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
+      <img src="./assets/logo.svg" alt="Some photo of...">
       <p>Some image text</p>
     </a>
   </section>
