major changes in header

--- a/code/index.html
+++ b/code/index.html
@@ -8,28 +8,22 @@
   </head>
   <body>
     <header class="header">
-      <div class="introduction">
-        <img class="logo" src="./logo.svg">
-      </div>
-      <div class="navbar">
-        <nav class="navigation"> <!--här kan man skriva divs istället-->
-          <div class="Home">
-            <p>Home</p>
-          <div class="News">
-            <p>News</p>
-          <div class="Stories">
-            <p>Stories</p>
-          <div class="Contact">
-            <p>Contact</p>
+      <img class="logo" src="./logo.svg">
+      <h1 class="title">Space News</h1>
+      <nav class="navigation-bar"> 
+        <div class="navigation-items">About us</div>
+        <div class="navigation-items">News</div>
+        <div class="navigation-items">Stories</div>
+        <div class="navigation-items">Contact</div>
         </nav>
       </div>  
     </header>
 
     <section class="big-news">
-      <!--<article>
-        <h1>Hej</h1>-->
-        <p>Här ska du skriva text om något ämne. testar</p>
-        <!--Här kan du också skriva divs-->
+      <div class="news-card">Norrsken</div>
+      <div class="news-card">Eclipse</div>
+      <div class="news-card">Meteor</div>
+      <div class="news-card">Telescope</div>
 
       </article>
       <!-- The big news content -->
