Added foot steps in header on desktop view

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title> Project 2: The News site</title>
 </head>
 
@@ -13,20 +13,25 @@
   <header class="header-landing-page">
     <div class="header-logo-container">
       <img class="header-logo" src="./assets/Circle-Forset-Night-bw (1).png" alt="Site logo">
-    </div>
+    </div>   
     <h1 class="site-title">HIKING</h1>
+    <div class="foot-step-right-side">      
+      <img class="foot-step" src="./assets/foot-steps.png" width="60px">
+      <img class="foot-step" src="./assets/foot-steps.png" width="60px">
+      <img class="foot-step" src="./assets/foot-steps.png" width="60px">      
+    </div>
     <nav class="navigation-container">
       <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">One</a>
+        <a class="nav-link" href="https://google.com">About us</a>
       </div>
       <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">Two</a>
+        <a class="nav-link" href="https://google.com">Contact us</a>
       </div>
       <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">Three</a>
+        <a class="nav-link" href="https://google.com">Inspiration</a>
       </div>
       <div class="navigation-item">
-        <a class="nav-link" href="https://google.com">Four</a>
+        <a class="nav-link" href="https://google.com">FAQ</a>
       </div>
     </nav>
   </header>
@@ -58,9 +63,9 @@
       <p>Transylvania Rumania</p>
     </a>
     <a href="#">
-      <img src="./assets/trappsteg.jpg" alt="Photo from Sweden">
-      <p>Saxnäs north of Sweden</p>
-    </a>
+    <img src="./assets/trappsteg.jpg" alt="Photo from Sweden">
+    <p>Saxnäs north of Sweden</p>
+  </a>
     <a href="#">
       <img src="./assets/hoga-kusten.jpg" alt="Photo from Sweden">
       <p>High Coast Sweden</p>
@@ -69,10 +74,7 @@
       <img src="./assets/kanot.jpg" alt="Photo from a conoe">
       <p>Canoeing in Sweden </p>
     </a>
-    <a href="#">
-      <img src="./assets/logo.svg" alt="Some photo of...">
-      <p>Some image text</p>
-    </a>
+    
   </section>
 
 </body>
