Remove unnecessary classes, update footer logo values, edit footer

--- a/code/index.html
+++ b/code/index.html
@@ -16,10 +16,10 @@
       </div>
       <div class="flex-child1">
        <nav class="navigation-bar">
-          <a class="navlink-1" href="">Ice Hockey</a> 
-          <a class="navlink-2" href="">Football</a> 
-          <a class="navlink-3" href="">Winter Sports</a> 
-          <a class="navlink-4" href="">Other Sports</a> 
+          <a href="">Ice Hockey</a> 
+          <a href="">Football</a> 
+          <a href="">Winter Sports</a> 
+          <a href="">Other Sports</a> 
         </nav>
       </div>
     </header>
@@ -28,7 +28,7 @@
         <img class="shadow" src="icehockey-news-site.jpg" alt="Ice hockey goalie">
       </div>
       <div class="big-news-text">
-        <h2 class="smaller-headline">Season finally starts!</h2>
+        <h2>Season finally starts!</h2>
         <p>
           After months of eager waiting, NHL season has finally started.
           <br>
@@ -93,7 +93,11 @@
       <div class="footer-text">
       <p>© Therese Hagelin
         <br>
-        Project 2 during Technigo Coding Bootcamp
+        <br>
+        Project 2 - News Site
+        <br>
+        <br>
+        Technigo Coding Bootcamp
         <br>
         Spring 2021
       </p>
